--- a/adult_eval.ipynb
+++ b/adult_eval.ipynb
@@ -19,11 +19,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hol = pd.read_csv('data/adult/adult_original_holdout.csv.gz')\n",
-    "trn = pd.read_csv('data/adult/adult_original_2k.csv.gz')\n",
-    "syn = pd.read_csv('data/adult/adult_synthetic.csv.gz')\n",
-    "syn_trn = pd.read_csv('data/adult/adult_synthetic.csv.gz') # FIXME\n",
-    "syn_gen = pd.read_csv('data/adult/adult_synthetic.csv.gz') # FIXME"
+    "hol = pd.read_csv('adult_original_holdout.csv.gz')\n",
+    "trn = pd.read_csv('adult_original_2k.csv.gz')\n",
+    "syn = pd.read_csv('adult_synthetic.csv.gz')\n",
+    "syn_trn = pd.read_csv('adult_synthetic.csv.gz') # FIXME\n",
+    "syn_gen = pd.read_csv('adult_synthetic.csv.gz') # FIXME"
    ]
   },
   {
