--- a/adult_syn.ipynb
+++ b/adult_syn.ipynb
@@ -481,7 +481,7 @@
    "source": [
     "rule3 = pd.merge(\n",
     "    pd.Series(['Husband', 'Wife'], name='relationship'),\n",
-    "    pd.Series(['Never-married', 'Divorced', 'Married-spouse-absent', 'Widowed', 'Seperated'], name='marital-status'),\n",
+    "    pd.Series(['Never-married', 'Divorced', 'Married-spouse-absent', 'Widowed', 'Separated'], name='marital-status'),\n",
     "    how='cross',\n",
     ")\n",
     "rule3"
@@ -489,10 +489,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# artificial rule - only one impossible combination for education-education-num\n",
+    "rule4 = df[['education','education-num']].drop_duplicates()\n",
+    "rule4['education-num'] = (rule4['education-num']+1).replace({17:1})"
+   ]
   },
   {
    "cell_type": "code",
@@ -504,7 +508,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -518,7 +522,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.12"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
